--- a/loginpage/loginpage.html
+++ b/loginpage/loginpage.html
@@ -151,7 +151,7 @@
       }
     }
 
-    @media screen and (max-width: 376px) {
+    @media screen and (min-width: 374px) and (max-width: 426px) {
       body {
         background-image: none;
         background-color: black;
